...

    @ViewBuilder
    private var searchFormView: some View {
        switch formType {
        case .adsModern:
            ADSModernSearchFormView()
                .navigationTitle("SciX Search")

        case .adsClassic:
            ADSClassicSearchFormView()
                .navigationTitle("ADS Classic Search")

        case .adsPaper:
...
